--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toggle de dark mode animado</title>
   </head>
-  <body class="bg-zinc-800 flex items-center">
+  <body
+    class="dark:bg-zinc-800 bg-zinc-100 flex items-center transition-colors duration-300"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
